--- a/html.html
+++ b/html.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css.css">
 </head>
+
 <body>
-    
+    <nav>
+        <div>
+            <a href="">Home</a>
+            <a href="">About</a><a href="">Contact</a><a href="">About</a>
+
+
+        </div>
+    </nav>
+
+
 </body>
+
 </html>
