--- a/html.html
+++ b/html.html
@@ -13,6 +13,7 @@
         <div>
             <a href="">Home</a>
             <a href="">About</a><a href="">Contact</a><a href="">About</a>
+            <a href=''>mail</a>
 
 
         </div>
